syntax = "proto3";

package shenzhouyinji;
option go_package = "./proto;shenzhouyinji";

service ManagementService {
    rpc GetConfigs(ConfigRequest) returns (ConfigResponse) {}
    rpc UpdateConfigs(ConfigRequest) returns (ConfigResponse) {}

    rpc CreateCategory(Category) returns (MsKeyword) {}
    rpc UpdateCategory(Category) returns (MsUpdateRes) {}
    rpc GetCategoryByID(MsKeyword) returns (Category) {}
    rpc GetCategoryByName(MsKeyword) returns (Category) {}
    rpc GetCategoryByParentID(MsKeyword) returns (CategoriesRes) {}
    rpc GetTopCategory(MsEmptyReq) returns (CategoriesRes) {}

    rpc CreateTag(Tag) returns (MsKeyword) {}
    rpc UpdateTag(Tag) returns (MsUpdateRes) {}
    rpc GetTagByID(MsKeyword) returns (Tag) {}
    rpc GetTagByCategoryID(MsKeyword) returns (TagsRes) {}

    rpc GetTurtleBackMenuList(MsKeyword) returns (TurtleBackMenuRes){}

    rpc GetTurtleBackConfigList(MsKeyword) returns (TurtleBackConfigRes){}
    rpc UpdateTurtleBackConfig(TurtleBackConfig) returns (MsUpdateRes){}


    rpc GetAreaInfoByParentID(AreaInfoRequest) returns (AreaInfosRes) {}

    rpc CreateAuditing(Auditing) returns (AuditingResponse) {}
    rpc GetAuditings(AuditingRequest) returns (AuditingResponse) {}

    rpc RestoreSceneryspot(RestoreRequest) returns (RestoreResponse) {}
	rpc RestoreEvent(RestoreRequest) returns (RestoreResponse) {}
	rpc RestoreUser(RestoreRequest) returns (RestoreResponse) {}
	rpc RestoreUserEvent(RestoreRequest) returns (RestoreResponse) {}
	rpc RestoreTask(RestoreRequest) returns (RestoreResponse) {}
	rpc RestoreBadge(RestoreRequest) returns (RestoreResponse) {}
	rpc RestoreLike(RestoreRequest) returns (RestoreResponse) {}
	rpc RestorePoints(RestoreRequest) returns (RestoreResponse) {}
    rpc RestoreConversation(RestoreRequest) returns (RestoreResponse) {}
}

message Category {
    string id = 1;
    string name = 2;
    string parent_id = 3;
    bool has_subclass = 4;
    int32 status = 5;
    int32 sort = 6;
}

message Tag {
    string id = 1;
    string name = 2;
    string category_id = 3;
    int32 status = 4;
}

message AreaInfo {
    string id = 1;
    string name = 2;
    string parent_id = 3;
    string type = 4;
    int32 status = 5;
}

message TurtleBackMenu {
    string id = 1;
    string menu_name = 2;
    string path = 3;
    string menu_code = 4;
}

message TurtleBackConfig {
    string id = 1;
    string sort = 2;
    string menu_config_name = 3;
    string menu_name = 4;
    string path = 5;
    bool enable = 6;
    string iconId = 7;
}


message MsKeyword {
    string value = 1;
}

message MsEmptyReq {}

message MsUpdateRes {
    bool value = 1;
}

message CategoriesRes {
    repeated Category data = 1;
}

message TurtleBackConfigRes{
    repeated TurtleBackConfig data = 1;
}

message TagsRes {
    repeated Tag data = 1;
}
message AreaInfosRes {
    repeated AreaInfo data = 1;
}

message TurtleBackMenuRes {
    repeated TurtleBackMenu data = 1;
}


message Config {
    string key = 1;
    string value = 2;
}

message ConfigRequest {
    repeated Config data = 1;
}

message ConfigResponse {
    repeated Config data = 1;
}


message Auditing {
    string id = 1;
    string code = 2;
    string message = 3;
    string data = 4;
    string created_by = 5;
    int32 created_time = 6;
}

message AuditingRequest {
    string code = 1;
    string created_by = 2;
    int32 start_time = 3;
    int32 end_time = 4;
}

message AuditingResponse {
    repeated Auditing data = 1;
}

message RestoreRequest {
    string userId = 1;
    repeated string values = 2;
}

message AreaInfoRequest {
    string type = 1;
    string parentId = 2;
}

message RestoreResponse {}

